tests/error/comprehension_errors/mutable_struct1.err
Error: Copy violation (at $FILE:12:5)
   | 
10 | @guppy
11 | def foo(s: MyStruct @ owned) -> None:
12 |     [s for _ in range(10)]
   |      ^ Variable `s` with non-copyable type `MyStruct` would be
   |        moved multiple times when evaluating this comprehension

Guppy compilation failed due to 1 previous error
